@@ -69,8 +69,6 @@ to the Maven compiler plugin in the module's pom.xml file:
     <compilerArgs>
         <arg>--add-exports</arg>
         <arg>java.base/jdk.internal.ref=org.apache.datasketches.memory</arg>
-        <arg>--add-exports</arg>
-        <arg>java.base/jdk.internal.misc=org.apache.datasketches.memory</arg>
     </compilerArgs>
 ```
 
@@ -85,19 +83,6 @@ The following runtime arguments should be provided when using the library:
     --add-opens java.base/java.nio=org.apache.datasketches.memory \
     --add-opens java.base/jdk.internal.misc=org.apache.datasketches.memory \
     --add-opens java.base/jdk.internal.ref=org.apache.datasketches.memory
-```
-
-In order to run unit tests, the Maven surefire plugin also requires similar runtime arguments in the
-`datasketches-memory-java9-tests Maven submodule pom.xml:
-
-```xml
-    <configuration>
-        <argLine>
-            --add-opens java.base/jdk.internal.ref=org.apache.datasketches.memory
-            --add-opens java.base/jdk.internal.misc=org.apache.datasketches.memory
-            --add-exports org.apache.datasketches.memory.tests/org.apache.datasketches.memory.test=org.testng
-        </argLine>
-    </configuration>
 ```
 
 ### JPMS and Java 8
